---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: ??????
  Features:
    - Split some modules into their own mods.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: ??????
  Features:
    - Added EnhancedFlashlight.
  Bugfixes:
    - Fixed brighter lights.
    - Fixed alert icon size.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ??????
  Features:
    - Prototype Tweaks.
    - Custom tile stack sizes.
    - Better color lamps.
    - More virtual signal icons.
    - Iondicators.
    - Smokeless.
    - Generic Vehicle Grids.
    - Squeak Through.
    - Remove decorations.
    - Small Fixes.
    - Entities for Picker Notes.
    - Picker Reacher (adjust prototype reach distances).