@@ -1,1 +1,2 @@
 require 'prototypes/vehicle-grids'
+require 'prototypes/woodless'
