@@ -37,6 +37,7 @@ picker-disable-smoke=Disable Smoke
 picker-disable-decorations=Disable Decorations
 picker-squeak-through=Smaller collision boxes
 picker-enhanced-lights=Better Flashlights
+picker-replace-wood=Change wood using recipes
 
 [mod-setting-description]
 picker-unminable-construction-robots=Make it impossible to pluck construction robots out of the air.\nFactorio default: false
@@ -71,6 +72,7 @@ picker-disable-smoke=Remove many smoke entities.
 picker-disable-decorations=Disable Decorations.
 picker-squeak-through=Enable smaller collision boxes to allow walking between most entities.
 picker-enhanced-lights=Better lights for players and cars.
+picker-replace-wood=Remove and replace raw wood in recipe ingredients.
 
 [picker-extra-settings-info]
 merge=__1____2__
